--- a/goedeLandingpage.html
+++ b/goedeLandingpage.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wat maakt een goede landingpage</title>
 </head>
 <body>
     <h1>
-    Wat maakt een goede landingpage
+    <strong>Wat maakt een goede landingpage</strong> <br>
     </h1>
+<br>
+<ol>
+    <li><strong>Overzichtelijk:</strong> Zodat mensen het makkelijk kunnen vinden waar alles staat</li>
+    <li><strong>Doelgroep:</strong> Zodat je doelgroep goed kunt bereiken</li>
+    <li><strong>Informatie:</strong> Zo dat mensen duidelijk weten waar de landingpage overgaat</li>
+    <li><strong>Toegankelijk:</strong> Om de bezoeker gerust te stellen</li>
+    <li><strong>Heading:</strong> Om aandacht te trekken voor de lezer</li>
+    <li><strong>Betrouwbaarheid:</strong> Mensen moeten je kunnen vertrouwen</li>
+    <li><strong>Emotie:</strong> Iedereen maakt op basis van zijn emoties keuzes</li>
+    <li><strong>Boven de fold:</strong> Plaatst belangrijke informatie en de call-to-action boven de fold, het bovenste gedeelte van de landingspagina waarvoor men niet hoeft te scrollen in de browser</li>
+    <li><strong>consistente boodschap:</strong> De titel van jouw landingspagina en in de call-to-action dezelfde boodschap te verwerken</li>
+    <li><strong>Benadruk de voordelen:</strong> Toon kort en bondig de voordelen van jouw dienst of product</li>
+</ol>
+<br>
     <p>Alex Marquez Lourenco</p>
 </body>
 </html>
