--- a/les4 Museum display/inline-block.html
+++ b/les4 Museum display/inline-block.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="StyleDisplay.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rijksmuseum</title>
+    <link rel="stylesheet" href="StyleDisplay.css">
+    <style>
+         main {
+            padding: 0 1%;
+        }
+        section {
+            display: inline-block;
+            width: 25%;
+            padding: 20px;
+            box-sizing: border-box;
+            margin: 0 1%;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,27 +27,42 @@
     </nav>
     <br>
     <h1><strong>Rijksmuseum - inline-block</strong></h1>
-    <br>
-<p class="sansserif">Het Rijksmuseum is het museum van Nederland. De wereldberoemde meesterwerken uit de Gouden Eeuw zijn onder andere het melkmeisje van Vermeer en de Nachtwacht van Rembrandt. Ook het Rijksmuseum zelf is een meesterwerk. De collectie wordt gepresenteerd in een prachtig gebouw met een geweldige inrichting. In 80 zalen vertellen 8.000 objecten het verhaal van 800 jaar Nederlandse kunst en geschiedenis, van de Middeleeuwen tot Mondriaan. Jaarlijks reizen meer dan 2,5 miljoen bezoekers door de eeuwen heen en ervaren een gevoel van schoonheid en tijdgevoel.</p>
-    <br>
-    <h3><strong> - 3 korte informatie over het Rijksmuseum:</strong></h3>
+    <main>
+        <section>
+            <p class="sansserif">Het Rijksmuseum is het museum van Nederland. De wereldberoemde meesterwerken uit de Gouden Eeuw zijn onder andere het melkmeisje van Vermeer en de Nachtwacht van Rembrandt. Ook het Rijksmuseum zelf is een meesterwerk. De collectie wordt gepresenteerd in een prachtig gebouw met een geweldige inrichting. In 80 zalen vertellen 8.000 objecten het verhaal van 800 jaar Nederlandse kunst en geschiedenis, van de Middeleeuwen tot Mondriaan. Jaarlijks reizen meer dan 2,5 miljoen bezoekers door de eeuwen heen en ervaren een gevoel van schoonheid en tijdgevoel.</p>
+        </section>
+        <section>
+            <h3><strong> - 3 korte informatie over het Rijksmuseum:</strong></h3>
     <br>
  <ul><li><strong>Informatie:</strong> Het Rijksmuseum in Amsterdam is een van de zestien rijksmusea in Nederland. De collectie biedt een overzicht van de Nederlandse kunst en geschiedenis met onder andere werken van 17e-eeuwse Nederlandse meesters als Rembrandt, Vermeer en Hals. Het museum is sinds 1885 gevestigd in het Rijksmuseumgebouw, ontworpen door de Nederlandse architect Pierre Cuypers.</li></ul> 
  <br>
  <ul><li><strong>Huisvestiging:</strong> Het Rijksmuseumgebouw met ruim 80 zalen ligt tussen de Stadhouderskade en het Museumplein in Amsterdam-Zuid. Aan de zijde van het Museumplein bevindt zich de Zuidvleugel, waarin tijdelijke tentoonstellingen worden gehouden, dat bestaat uit het fragmentengebouw en de Druckeruitbouw. In de tuinen bevindt zich het entreegebouw, de Teekenschool en de voormalige directeurswoning, tegenwoordig het kantoor voor de conservatoren. Aan de overzijde van de Hobbemastraat is het Directiegebouw en het Ateliergebouw gevestigd, waarin de restauratieafdeling gevestigd is.</li></ul>
  <br>
  <ul><li><strong>Schilderijen:</strong> De collectie schilderijen van het Rijksmuseum geeft een overzicht van de Nederlandse schilderkunst van de 15e eeuw tot omstreeks 1900. De nadruk ligt hierbij vooral op de 17e-eeuwse Hollandse Meesters. Ook bezit het museum een kleine collectie Zuid-Nederlandse en Italiaanse meesters. De diverse topstukken worden gepresenteerd in de eregalerij, een grote zaal in de lengteas van het museum. Aan het uiteinde van deze zaal bevindt zich in de Nachtwachtzaal het bekendste werk van het museum, de Nachtwacht van Rembrandt.</li></ul>
- <br>
- <a href="https://www.rijksmuseum.nl/nl"> <img src="https://s3.eu-west-1.amazonaws.com/museumnacht.amsterdam/thumbs/620x_5d78aeb21264ab3e0e65dee34c508996630470d602abc.jpg" alt="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmuseumnacht.amsterdam%2Fmuseum%2F26%2Frijksmuseum&psig=AOvVaw2XhtbNj128EyRuZNEtoJU7&ust=1606215601357000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJC0yMrBmO0CFQAAAAAdAAAAABAD"></a>
-<p>
-    <h4>
-    Rijksmuseum Amsterdam <br>
-Postbus 74888 <br>
-1070 DN Amsterdam <br>
-E-mail: info@rijksmuseum.nl <br>
-Telefoonnummer: +31 (0) 20 6747 000 <br>
-<a href="https://www.rijksmuseum.nl/nl"> Naar het Rijksmuseum in Amsterdam</a>
-</h4>
-</p>
+        </section>
+        <section>
+            <a href="https://www.rijksmuseum.nl/nl"> <img src="https://s3.eu-west-1.amazonaws.com/museumnacht.amsterdam/thumbs/620x_5d78aeb21264ab3e0e65dee34c508996630470d602abc.jpg" alt="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmuseumnacht.amsterdam%2Fmuseum%2F26%2Frijksmuseum&psig=AOvVaw2XhtbNj128EyRuZNEtoJU7&ust=1606215601357000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJC0yMrBmO0CFQAAAAAdAAAAABAD"></a>
+        </section>
+        <section>
+            <p>
+                <h4>
+                Rijksmuseum Amsterdam <br>
+            Postbus 74888 <br>
+            1070 DN Amsterdam <br>
+            E-mail: info@rijksmuseum.nl <br>
+            Telefoonnummer: +31 (0) 20 6747 000 <br>
+            <a href="https://www.rijksmuseum.nl/nl"> Naar het Rijksmuseum in Amsterdam</a>
+            </h4>
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>
+            <p style="font-family:'Times New Roman'">Oefening  F1M2 Ontwerp <br>
+                Alex Marquez Lourenço</p>    
+        </p>
+    </footer>
+   
 </body>
 </html>
