--- a/les4 Museum display/index.html
+++ b/les4 Museum display/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <nav>
-        <a href="index.html">block></a>
+        <a href="index.html">block</a>
         <a href="inline.html">inline</a>
         <a href="inline-block.html">inline-block</a>
         <a href="flex.html">flexbox</a>
